# Agora

./: .env.example  .gitignore  BACKEND_PAYMENT_ARCHITECTURE.md  CIRCLE_INTEGRATION.md  CLEANUP_SUMMARY.md  COMPLETE_ARCHITECTURE.md  FRONTEND_CLEANUP_LOG.md  MVP_IMPLEMENTATION_PLAN.md  PROJECT_GUIDE.md  PROJECT_STATUS.md  README.md  REFACTOR_SUMMARY.md  START_HERE.md  SUBMISSION.md  SUBMISSION_DRAFT.md  USER_GUIDE.md  WALLET_GUIDE.md  X402_GUIDE.md  agora_local.db  agora_sdk.py  hello.py  pyproject.toml  requirements.txt
agents/: analyst_agent.py  extractor_agent.py  formatter_agent.py  summarizer_agent.py  web_search_agent.py
agora/: .env.example  MARKETPLACE_SPEC.md  PROJECT_GUIDE.md  README.md  agora_local.db  requirements.txt
agora_x402/: __init__.py  agent_server.py  cli.py  exceptions.py  facilitator_client.py  pay_for.py  wallet.py  x402_client.py  x402_protocol.py
api/: main.py  v1.py
dev-controlled-projects/: create-agents.ts  fund-agents.ts  package-lock.json
facilitator/: __init__.py  api.py  db.py  fees.py  nonce.py  settlement.py
frontend/: index.html  package-lock.json  package.json
orchestrator/: audit_logger.py  orchestrator.py
scripts/: bootstrap_circle.py  create_analyst_wallet.py  drain_economy.py  encrypt_entity_secret.py  faucet.py  frenzy_demo.py  fund_analyst.py  manage_agents.py  payment_loop_demo.py  quickstart.py  register_agents.py  register_guide.py  run_all_agents.sh  run_facilitator.sh  sdk_demo.py  setup_demo_economy.py  setup_env.py  single_tx_demo.py  status.py  supply_chain_demo.py  test_circle_sdk.py  test_gemini.py  (+1 more)
(+81 files in other folders)
